--- a/public/gp/css/user.css
+++ b/public/gp/css/user.css
@@ -1,3 +1,88 @@
+#skin-root, article, div, footer, header, main, nav, section {
+  -webkit-box-align: stretch;
+  -webkit-align-items: stretch;
+  -ms-flex-align: stretch;
+  align-items: stretch;
+  border: 0 solid #000;
+  -webkit-box-sizing: border-box;
+  box-sizing: border-box;
+  display: -webkit-box;
+  display: -webkit-flex;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-orient: vertical;
+  -webkit-box-direction: normal;
+  -webkit-flex-direction: column;
+  -ms-flex-direction: column;
+  flex-direction: column;
+  -webkit-flex-shrink: 0;
+  -ms-flex-negative: 0;
+  flex-shrink: 0;
+  margin: 0;
+  padding: 0;
+  position: relative;
+}
+
+a, article, body, div, footer, form, h1, h2, header, html, img, label, li, nav, p, section, span, time, ul {
+  margin: 0;
+  padding: 0;
+  border: 0;
+  font: inherit;
+  vertical-align: baseline;
+}
+
+a, a:visited {
+  color: #003569;
+  text-decoration: none;
+}
+
+#root, body, html {
+  height: 100%;
+}
+
+body, button, input, textarea {
+  font-family: 'Century Gothic', 'Segoe UI';
+  font-size: 14px;
+  font-weight: 400;
+}
+
+body {
+  color: #1a1a1a;
+  background: #efeff4;
+  -webkit-tap-highlight-color: rgba(26,26,26,0);
+}
+
+button {
+  cursor: pointer;
+}
+
+#skin-root, ._gMX {
+  -webkit-box-orient: horizontal;
+  -webkit-box-direction: normal;
+  -webkit-flex-direction: row;
+  -ms-flex-direction: row;
+  flex-direction: row;
+  -webkit-box-flex: 1;
+  -webkit-flex-grow: 1;
+  -ms-flex-positive: 1;
+  flex-grow: 1;
+  -webkit-box-pack: center;
+  -webkit-justify-content: center;
+  -ms-flex-pack: center;
+  justify-content: center;
+  margin: 0 auto;
+  width: 100%;
+}
+
+._gxM, ._gcQ {
+  -webkit-box-orient: horizontal;
+  -webkit-box-direction: normal;
+  -webkit-flex-direction: row;
+  -ms-flex-direction: row;
+  flex-direction: row;
+  width: 100%;
+}
+
 ._gDa {
   -webkit-flex-basis: 52px;
   -ms-flex-preferred-size: 52px;
@@ -162,6 +247,136 @@
   background-color: #1185fe;
   border-color: #1185fe;
   font-weight: 700;
+}
+
+._gxM, ._gcQ {
+  -webkit-box-orient: horizontal;
+  -webkit-box-direction: normal;
+  -webkit-flex-direction: row;
+  -ms-flex-direction: row;
+  flex-direction: row;
+  width: 100%;
+}
+
+._eYG {
+  -webkit-box-align: start;
+  -webkit-align-items: flex-start;
+  -ms-flex-align: start;
+  align-items: flex-start;
+  display: -webkit-box;
+  display: -webkit-flex;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-flex: 1;
+  -webkit-flex-grow: 1;
+  -ms-flex-positive: 1;
+  flex-grow: 1;
+  -webkit-flex-shrink: 1;
+  -ms-flex-negative: 1;
+  flex-shrink: 1;
+  margin-left: 12px;
+  overflow: hidden;
+}
+
+._QxM {
+  -webkit-box-align: center;
+  -webkit-align-items: center;
+  -ms-flex-align: center;
+  align-items: center;
+  -webkit-box-orient: horizontal;
+  -webkit-box-direction: normal;
+  -webkit-flex-direction: row;
+  -ms-flex-direction: row;
+  flex-direction: row;
+  max-width: 100%;
+  overflow: auto;
+  -webkit-box-flex: 1;
+  -webkit-flex-grow: 1;
+  -ms-flex-positive: 1;
+  flex-grow: 1;
+}
+
+._TZx {
+  line-height: 1.5;
+  font-weight: 700;
+  color: #abb8c2;
+}
+
+._TXs, ._MTx {
+  overflow: hidden;
+  text-overflow: ellipsis;
+  white-space: nowrap;
+  padding-left: 5px;
+  margin-left: -5px;
+}
+
+._uHt {
+  color: #666;
+}
+
+._Bfa {
+  margin-left: 12px;
+}
+
+._QZg {
+  -webkit-align-content: center;
+  -ms-flex-line-pack: center;
+  align-content: center;
+  -webkit-box-align: center;
+  -webkit-align-items: center;
+  -ms-flex-align: center;
+  align-items: center;
+  -webkit-box-orient: horizontal;
+  -webkit-box-direction: normal;
+  -webkit-flex-direction: row;
+  -ms-flex-direction: row;
+  flex-direction: row;
+  -webkit-flex-wrap: wrap;
+  -ms-flex-wrap: wrap;
+  flex-wrap: wrap;
+  -webkit-box-flex: 1;
+  -webkit-flex: 1 0 0%;
+  -ms-flex: 1 0 0%;
+  flex: 1 0 0%;
+  -webkit-box-pack: end;
+  -webkit-justify-content: flex-end;
+  -ms-flex-pack: end;
+  justify-content: flex-end;
+}
+
+._gM_a {
+  border: 1px solid #1185fe;
+  border-radius: 6px;
+}
+
+._agM {
+  background: #1185fe;
+  border-radius: 100px;
+}
+
+._TX_a, ._TX_a:visited {
+  min-width: 92px;
+  text-align: center;
+  box-sizing: border-box;
+  color: #1185fe;
+  font-size: 13px;
+  font-weight: 700;
+  line-height: 1;
+  padding: 8.5px 16px;
+}
+
+._TX_a:active {
+  background: rgba(17,133,254,.1);
+}
+
+._atX, ._atX:visited {
+  color: #fff;
+}
+
+._QxM, ._DYg , ._DYg:visited {
+  -webkit-flex-shrink: 1;
+  -ms-flex-negative: 1;
+  flex-shrink: 1;
 }
 
 @media (min-width: 640px) {
