--- a/public/gp/css/common.css
+++ b/public/gp/css/common.css
@@ -1,3 +1,353 @@
-* {
-  
+@font-face {
+  font-family: 'Gothic';
+  /*src: url('https://public.twineall.com/gp/font/GOTHIC.TTF') format('truetype');*/
+  src: url('https://localhost/public/gp/font/GOTHIC.TTF') format('truetype');
+  font-weight: 100;
+  font-style: normal;
+}
+
+#skin-root, article, div, footer, header, main, nav, section {
+  -webkit-box-align: stretch;
+  -webkit-align-items: stretch;
+  -ms-flex-align: stretch;
+  align-items: stretch;
+  border: 0 solid #000;
+  -webkit-box-sizing: border-box;
+  box-sizing: border-box;
+  display: -webkit-box;
+  display: -webkit-flex;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-orient: vertical;
+  -webkit-box-direction: normal;
+  -webkit-flex-direction: column;
+  -ms-flex-direction: column;
+  flex-direction: column;
+  -webkit-flex-shrink: 0;
+  -ms-flex-negative: 0;
+  flex-shrink: 0;
+  margin: 0;
+  padding: 0;
+  position: relative;
+}
+
+a, article, body, div, footer, form, h1, h2, header, html, img, label, li, nav, p, section, span, time, ul {
+  margin: 0;
+  padding: 0;
+  border: 0;
+  font: inherit;
+  vertical-align: baseline;
+}
+
+a, a:visited {
+  color: #003569;
+  text-decoration: none;
+}
+
+#root, body, html {
+  height: 100%;
+}
+
+body, button, input, textarea {
+  font-family: Gothic;
+  font-size: 14px;
+  font-weight: 400;
+}
+
+body {
+  color: #1a1a1a;
+  background: #efeff4;
+  -webkit-tap-highlight-color: rgba(26,26,26,0);
+}
+
+button {
+  cursor: pointer;
+}
+
+#skin-root, ._gMX {
+  -webkit-box-orient: horizontal;
+  -webkit-box-direction: normal;
+  -webkit-flex-direction: row;
+  -ms-flex-direction: row;
+  flex-direction: row;
+  -webkit-box-flex: 1;
+  -webkit-flex-grow: 1;
+  -ms-flex-positive: 1;
+  flex-grow: 1;
+  -webkit-box-pack: center;
+  -webkit-justify-content: center;
+  -ms-flex-pack: center;
+  justify-content: center;
+  margin: 0 auto;
+  width: 100%;
+}
+
+._UYq {
+  display: -webkit-box;
+  display: -webkit-flex;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-orient: vertical;
+  -webkit-box-direction: normal;
+  -webkit-flex-direction: column;
+  -ms-flex-direction: column;
+  flex-direction: column;
+  -webkit-box-pack: justify;
+  -webkit-justify-content: space-between;
+  -ms-flex-pack: justify;
+  justify-content: space-between;
+  margin: 0 auto;
+  width: 1000px;
+  min-height: 100%;
+}
+
+._FxQ {
+  margin: 0 auto;
+  width: 100%;
+}
+
+._GTQ {
+  text-align: center;
+}
+
+._SyA {
+  margin-top: 120px;
+}
+
+._UxE {
+  display: -webkit-box;
+  display: -webkit-flex;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-orient: horizontal;
+  -webkit-box-direction: normal;
+  -webkit-flex-direction: row;
+  -ms-flex-direction: row;
+  flex-direction: row;
+  width: 100%;
+}
+
+._UXa {
+    display: -webkit-box;
+    display: -webkit-flex;
+    display: -ms-flexbox;
+    display: flex;
+    -webkit-box-orient: vertical;
+    -webkit-box-direction: normal;
+    -webkit-flex-direction: column;
+    -ms-flex-direction: column;
+    flex-direction: column;
+    margin-left: 64px;
+    margin-top: 35px;
+    width: 390px;
+    text-align: left;
+}
+
+._UGA {
+  -webkit-align-self: flex-start;
+  -ms-flex-item-align: start;
+  align-self: flex-start;
+  display: -webkit-box;
+  display: -webkit-flex;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-orient: vertical;
+  -webkit-box-direction: normal;
+  -webkit-flex-direction: column;
+  -ms-flex-direction: column;
+  flex-direction: column;
+  margin-left: 90px;
+  border-radius: 2px;
+  width: 400px;
+  background: #fff;
+  box-shadow: 0 15px 50px 0 rgba(0,34,77,.08);
+}
+
+._Ctx {
+  padding: 12px;
+  font-size: 52px;
+}
+
+._gBA {
+  border-radius: 3px;
+}
+
+._gBC {
+  border: 0;
+  padding: 0 23px;
+}
+
+._UFA {
+  position: relative;
+  border: 0;
+  margin: 0;
+  overflow: hidden;
+}
+
+._RRD:focus {
+  background: #fff;
+  outline: 0;
+}
+
+._RRD {
+  margin-top: 12px;
+  border: 0;
+  border-bottom: 1px solid #ebeef5;
+  padding: 14px 0;
+  width: 100%;
+  line-height: 20px;
+  font-size: 14px;
+  background-color: transparent;
+  color: #555;
+  box-sizing: border-box;
+  border-radius: 0;
+  box-shadow: none;
+  background: #fff;
+}
+
+._RRD::placeholder, ._RRD::-moz-placeholder {
+  color: #ccc;
+  -webkit-text-fill-color: #ccc;
+  font-weight: 300;
+  opacity: 1;
+}
+
+._FFe {
+  margin: 32px 24px 28px;
+  height: 36px;
+}
+
+._RRe {
+  display: block;
+  padding: 0;
+  width: 100%;
+  font-size: 15px;
+  line-height: 33px;
+  color: #fff;
+  text-align: center;
+  text-shadow: 0 1px 1px rgba(0,0,0,.2);
+  background: #80c3f7;
+  background: -webkit-linear-gradient(top,#80c3f7,#6bbaf8);
+  background: linear-gradient(to bottom,#80c3f7,#6bbaf8);
+  border: 1px solid #1D80CF;
+  border-radius: 5px;
+  box-shadow: inset 0 1px 0 rgba(255,255,255,.3),0 1px 1px rgba(50,50,50,.05);
+  outline: 0;
+  cursor: pointer;
+  -webkit-tap-highlight-color: rgba(0,0,0,0);
+}
+
+._GXe {
+  margin: 0;
+  border-radius: 2px;
+  width: 100%;
+  line-height: 60px;
+  font-size: 14px;
+  color: #8590a6;
+  background: #f7f8fa;
+}
+
+._THa {
+  color: #175199;
+}
+
+._bsZ {
+  border: 1px solid;
+  color: #fff;
+  line-height: 1;
+  white-space: nowrap;
+  background: none;
+  -webkit-appearance: none;
+  outline: none;
+  border-radius: 100px;
+  display: block;
+  padding: 13px 0;
+  width: 100%;
+  background-color: #1185fe;
+  border-color: #1185fe;
+  font-weight: 700;
+}
+
+._TxA {
+  display: block;
+  padding: 12px 16px;
+  width: 100%;
+  height: auto;
+  font-size: 14px;
+  border: 1px solid #e7eaf1;
+  border-radius: 100px;
+  box-sizing: border-box;
+  resize: none;
+  outline: none;
+  color: inherit;
+  transition: box-shadow .15s ease-out;
+  overflow: auto;
+  border: 0
+}
+
+._TxA:focus::placeholder {
+  color: rgba(154, 170, 191, .8);
+}
+
+._TxA:hover::placeholder {
+  color: rgba(154, 170, 191, .8);
+}
+
+._TxA::placeholder {
+  color: #9aaabf;
+  transition: color .15s ease-out
+}
+
+._TxA:focus {
+  /*box-shadow: 0 0 5px #e7eaf1;*/
+}
+
+@media (min-width: 481px) {
+  ._UfX::after, ._UfX::before {
+    content: '';
+    display: block;
+    -webkit-flex-basis: 40px;
+    -ms-flex-preferred-size: 40px;
+    flex-basis: 40px;
+    -webkit-flex-shrink: 0;
+    -ms-flex-negative: 0;
+    flex-shrink: 0;
+  }
+
+  ._UfX {
+    padding: 0 40px;
+    pointer-events: none;
+    -webkit-transform: translate3d(0,0,0);
+    transform: translate3d(0,0,0);
+  }
+}
+
+@media (max-width: 740px) {
+  ._UYq {
+    width: 92%;
+  }
+
+  ._SyA {
+    margin: 0;
+  }
+
+  ._UxE {
+    -webkit-box-orient: vertical;
+    -webkit-box-direction: normal;
+    -webkit-flex-direction: column;
+    -ms-flex-direction: column;
+    flex-direction: column;
+    margin-top: 0;
+    width: 100%;
+  }
+
+  ._UXa {
+    display: none;
+  }
+
+  ._UGA {
+    margin-left: 0;
+    margin-top: 30px;
+    width: 100%;
+  }
 }
