--- a/public/gp/css/user.css
+++ b/public/gp/css/user.css
@@ -266,13 +266,13 @@ button {
   font-weight: 700;
 }
 
-._gxM, ._gcQ {
-  -webkit-box-orient: horizontal;
-  -webkit-box-direction: normal;
-  -webkit-flex-direction: row;
-  -ms-flex-direction: row;
-  flex-direction: row;
-  width: 100%;
+._gcQ {
+  /*height: 60px;*/
+  padding: 10px;
+  -webkit-box-align: center;
+  -webkit-align-items: center;
+  -ms-flex-align: center;
+  align-items: center;
 }
 
 ._eYG {
@@ -808,6 +808,59 @@ button {
 ._btX {
   font-weight: 600;
   padding: 15px;
+}
+
+._txe, ._txw {
+  /*width: 100%;*/
+  padding: 12px 18px;
+}
+
+._txw {
+  color: #666;
+  border-radius: 100px 100px 100px 0;
+  background: #fff
+}
+
+._txe {
+  color: #fff;
+  border-radius: 100px 100px 0 100px;
+  background: #1185fe;
+  text-align: right;
+  /*width: 100%;*/
+}
+
+._-gs {
+  border-top: 1px solid #eee;
+  bottom: 0;
+  position: fixed;
+  width: 100%;
+  z-index: 19;
+}
+
+._TxA {
+  display: block;
+  padding: 12px 16px;
+  width: 100%;
+  height: auto;
+  font-size: 14px;
+  border: 1px solid #e7eaf1;
+  border-radius: 100px;
+  box-sizing: border-box;
+  resize: none;
+  outline: none;
+  color: inherit;
+  transition: box-shadow .15s ease-out;
+  overflow: auto;
+  border: 0
+}
+
+._MtX {
+  font-size: 10px;
+  color: #999;
+  letter-spacing: .3px;
+  text-transform: uppercase;
+  white-space: nowrap;
+  text-overflow: ellipsis;
 }
 
 @media (min-width: 481px) {
